--- a/MvcProjeKampi/Web.config
+++ b/MvcProjeKampi/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
   <system.web>
 	 
-		 <customErrors mode="On">
+		  <customErrors mode="On">
 		 <error statusCode="404" redirect="/ErrorPage/Page404"/>
 	 </customErrors> 
 	  
@@ -26,6 +26,12 @@
 	  <authentication mode="Forms"> 
 		  <forms loginUrl="/Login/Index"></forms>
 	  </authentication>
+	  
+  <roleManager enabled="true" defaultProvider="TestRoleProvider">
+	  <providers>
+		  <add name="TestRoleProvider" type="MvcProjeKampi.Roles.AdminRoleProvider"/>
+	  </providers>
+  </roleManager>
 	  
   </system.web>
   <connectionStrings>
